messege colour changed

--- a/app1/templates/login.html
+++ b/app1/templates/login.html
@@ -178,6 +178,14 @@
         .phone-input::placeholder {
     color: white;
 }
+.alert {
+    border-radius: 8px;
+    font-size: 0.9rem;
+    color: white;
+    background-color: #333333;
+    border-color: #555555;
+}
+
 
     </style>
 </head>
