notification icon and user profile icon added

--- a/app1/templates/base.html
+++ b/app1/templates/base.html
@@ -507,6 +507,12 @@
         .popup-content li:hover {
             background-color: #e9ecef;
         }
+        
+        @media (max-width:435px){
+            .notification-wrapper{
+                margin-left: 300px;
+            }
+        }
 
         /* Responsive adjustments */
         @media (max-width: 768px) {
